# IterCluster

./: LICENSE  README
FalseRemove/: CMakeLists.txt  build.sh  main.cpp
FalseRemove/src/: Barcode2Read.cpp  Barcode2Read.h  Cluster.cpp  Cluster.h  ClusterControl.cpp  ClusterControl.h  ClusterOperator.cpp  ClusterOperator.h  LoadRead.cpp  LoadRead.h  Makefile  ReadsInBinary.h  SeqOperator.cpp  SeqOperator.h  SeqReader.cpp  cmake_install.cmake  main.cpp
IterCluster/: CMakeCache.txt  CMakeLists.txt  IterCluster-MCL  Makefile  cmake_install.cmake  main.cpp
IterCluster-MCL/: CMakeLists.txt  README  build.sh  main.cpp
IterCluster-MCL/src/: Seed.cpp  Seed.h  SeedControl.cpp  SeedControl.h  Timer.h  global.cpp  global.h
IterCluster-MCL/src/eigen-eigen-b9cd8366d4e8/unsupported/: COPYING.BSD  COPYING.GPL  COPYING.LGPL  COPYING.MINPACK  COPYING.MPL2  COPYING.README  CTestConfig.cmake  CTestCustom.cmake.in  INSTALL  blas  cmake  debug  demos  eigen3.pc.in  failtest  lapack  scripts  signature_of_eigen3_matrix_library
IterCluster/src/: CMakeLists.txt  Makefile  Seed.cpp  cmake_install.cmake
IterCluster/test/: .IterCluster.sh.swp  .plot.R.swp  IterCluster.sh  optput1  optput2  optput3  optput4  optput5  optput6  optput7  optput8  optput9
LFR_matrix_bulid/example/: 02.data_prepare(1).pl
LFR_matrix_bulid/src/: CMakeLists.txt  main.cpp  make.sh  nohup.out
matrix-bulid/src/: CMakeLists.txt  Global.cpp  Global.h  Read2KmerBuffer.h  Read2KmerCount.cpp  UniqueKmerArray.h  make.sh
matrix-bulid/src/Utils/: Marco.h
matrix-bulid/src/test/: KmerHash_test.cpp  Test.h
matrix-bulid/src/test/Data/: testRead1.fq  testRead2.fq
