PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 
ADD_SUBDIRECTORY( src )
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(main ${DIR_SRCS}  )
add_definitions(-std=c++11)
include_directories( src /ldfssz1/MGI_ALGORITHM/assembly/wengjiancong/My_software/Cplusplus/eigen-eigen-b9cd8366d4e8/)
TARGET_LINK_LIBRARIES( main Test )
TARGET_LINK_LIBRARIES(main pthread)
SET(CMAKE_C_COMPILER "/share/app/gcc-5.2.0/bin/g++")

